MMA-7063 GHAS oppdateringer, rydding og refaktorering